--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-custom": "react-scripts start -H 10.11.196.109 -p 3000 ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
